--- a/ebook-parent/ebook-domain/src/main/resources/application.properties
+++ b/ebook-parent/ebook-domain/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#spring.datasource.url= jdbc:postgresql://localhost:5432/ebookdb
-spring.datasource.url=jdbc:postgresql://ebook.cw0jere7mdxt.us-east-2.rds.amazonaws.com:5432/ebook
-#spring.datasource.username=postgres
-spring.datasource.username=ebook1
-#spring.datasource.password=betsol
-spring.datasource.password=ajitesh1
+spring.datasource.url= jdbc:postgresql://localhost:5432/ebookdb
+#spring.datasource.url=jdbc:postgresql://ebook.cw0jere7mdxt.us-east-2.rds.amazonaws.com:5432/ebook
+spring.datasource.username=postgres
+#spring.datasource.username=ebook1
+spring.datasource.password=betsol
+#spring.datasource.password=ajitesh1
 spring.datasource.initialize=false
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
