--- a/ebook-parent/ebook-domain/.classpath
+++ b/ebook-parent/ebook-domain/.classpath
@@ -27,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="/ebook-common"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
