--- a/ebook-parent/ebook-ui/pom.xml
+++ b/ebook-parent/ebook-ui/pom.xml
@@ -65,12 +65,10 @@
 			<version>2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk</artifactId>
-			<version>1.11.297</version>
-			<scope>compile</scope>
-		</dependency>
-
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk-ses</artifactId>
+    <version>1.11.337</version>
+</dependency> 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
