--- a/ebook-parent/ebook-domain/src/main/resources/application.properties
+++ b/ebook-parent/ebook-domain/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/ebook
+spring.datasource.url= jdbc:postgresql://localhost:5432/ebookdb
 #spring.datasource.url=jdbc:postgresql://ebook.cw0jere7mdxt.us-east-2.rds.amazonaws.com:5432/ebook
 spring.datasource.username=postgres
 #spring.datasource.username=ebook1
